--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react": "^17.0.0-rc.3",
+    "react-dom": "^17.0.0-rc.3"
   }
 }
