--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "ts-loader": "^8.0.6",
+    "typescript": "^4.0.3",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "react": "^17.0.0-rc.3",
-    "react-dom": "^17.0.0-rc.3"
+    "react-dom": "^17.0.0-rc.3",
+    "react-habitat": "^1.0.1"
   }
 }
