--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.2",
     "babel-loader": "^8.1.0",
+    "react-refresh": "^0.9.0",
     "ts-loader": "^8.0.6",
     "typescript": "^4.0.3",
     "webpack": "^5.1.3",
